# JYEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  Client.rc  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md
JYEngine/: Client.rc  Client.vcxproj  Client.vcxproj.filters  Engine.vcxproj  Engine.vcxproj.filters  JYEngine.sln
JYEngine/Output/: Engine.idb
JYEngine/res/shader/: test.hlsl
JYEngine/src/client/: framework.h
JYEngine/src/editor/: JFBXLoader.h  JPanel.h
JYEngine/src/engine/: JCommandQueue.h  JDescriptorHeap.h  JDescriptorHeapManager.h  JDevice.h  JEngine.h  JEngineContext.h  JHashFunction.h  JRenderContext.h  JRenderDefinition.h  JRenderResource.h  JRenderTarget.h  JRootSignature.h  JSwapChain.h  precompile.h
JYEngine/src/shader/: test.hlsl
SampleProjects/BistroExterior/: project.json
SampleProjects/BistroExterior/materials/: mat_Antenna_Metal_55.jmaterial  mat_Antenna_Plastic_56.jmaterial  mat_Antenna_Plastic_Blue_54.jmaterial  mat_Ashtray_89.jmaterial  mat_Awnings_Beams_128.jmaterial  mat_Awnings_Fabric_127.jmaterial  mat_Awnings_Hotel_Fabric_17.jmaterial  mat_Balcony_Concrete_113.jmaterial  mat_Balcony_Green_Wood_116.jmaterial  mat_Balcony_Ornaments_115.jmaterial  mat_Balcony_Trims_114.jmaterial  mat_Banner_Metal_12.jmaterial  mat_Bistro_Sign_Letters_126.jmaterial  mat_Bistro_Sign_Main_125.jmaterial  mat_Bollards_88.jmaterial  mat_Chimneys_Metal_72.jmaterial  mat_Concrete2_71.jmaterial  mat_Concrete3_104.jmaterial  mat_Concrete_21.jmaterial  mat_Concrete_Striped_73.jmaterial  mat_ElectricBox_99.jmaterial  mat_Emissive_StreetLight_0.jmaterial  mat_Foliage_Bux_Hedges46_DoubleSided_1.jmaterial  mat_Foliage_Flowers_DoubleSided_2.jmaterial  mat_Foliage_Ivy_branches_69.jmaterial  mat_Foliage_Ivy_leaf_a_DoubleSided_93.jmaterial  mat_Foliage_Leaves_DoubleSided_76.jmaterial  mat_Foliage_Linde_Tree_Large_Green_Leaves_DoubleSided_123.jmaterial  mat_Foliage_Linde_Tree_Large_Orange_Leaves_DoubleSided_122.jmaterial  mat_Foliage_Linde_Tree_Large_Trunk_121.jmaterial  mat_Foliage_Paris_Flowers_3.jmaterial  mat_Foliage_Trunk_77.jmaterial  mat_LanternEmissive_31.jmaterial  mat_MASTER_Awning_Beams_78.jmaterial  mat_MASTER_Awning_Fabric_Cyan_39.jmaterial  (+97 more)
SampleProjects/Sponza/: project.json
benchmark/: AoSSceneMock.h  BenchmarkCommon.h  MatrixMath.h  OOPSceneMock.h  SoASceneMock.h  WorldMatrixSceneMock.h  main.cpp
docs/: AI_FRIENDLY_ENGINE_VISION.md  AI_FRIENDLY_SCENE_METADATA_PLAN.md  CURRENT_ARCHITECTURE_NOTES.md  DATA_ORIENTED_ENGINE_DESIGN_2026-05-26.md  DATA_STRUCTURE_OVERVIEW.html  DOD_BENCHMARK_PLAN.md  DOD_RENDER_FLOW_DESIGN_2026-05-19.html  ENGINE_STRUCTURE_OVERVIEW.html  PULL_CHANGE_OVERVIEW.html  RENDER_FLOW_STATUS_2026-05-15.md  SCENE_DATA_NEXT_PROMPT_2026-05-14.md  SOURCE_LAYOUT.md  engine_frame_flow.html
res/mesh/: Cube.fbx
res/scene/: sample.jscene.json  sample_1000_cups.jscene.json
res/shader/: base.hlsl  grid.hlsl  lighting_copy.hlsl
samples/GaussianSmoke/: main.cpp
src/client/: CMakeLists.txt  Client.h
src/client/OpenFBX/: ofbx.cpp
src/client/editor/: JAssetManager.h  JEditorPanel.h  JFBXLoader.h  JImGuiLayer.h  JPanel.h  JSampleSceneData.cpp  JSampleSceneData.h  JSceneBuilder.cpp  JSceneBuilder.h  JSceneManager.cpp  JSceneManager.h  JScenePanel.h
src/client/editor/private/: JAssetManager.cpp  JFBXLoader.cpp  JImGuiLayer.cpp  JPanel.cpp  JScenePanel.cpp
src/client/private/: Client.cpp
src/engine/: CMakeLists.txt  JCameraComponent.h  JCommandQueue.h  JDevice.h  JEngine.h  JGraphicResource.h  JMaterialFactory.h  JMaterialResource.h  JObject.h  JRenderContext.h  JRenderDB.h  JRenderDefinition.h  JRenderResource.h  JRenderServer.h  JRenderTarget.h  JRenderer.h  JScene.h  JSwapChain.h  precompile.h
src/engine/asset/: JMaterial.h  JMesh.h  JShader.h  JTextureFile.h
src/engine/core/: JEngine.h  JEngineContext.h  JHashFunction.h  JJobSystem.h  JObject.h  JPool.h
src/engine/dx12/: JDx12Helper.h
src/engine/dx12/private/: JDx12Helper.cpp
src/engine/platform/: JDevice.h
src/engine/private/: JCameraComponent.cpp  JCommandQueue.cpp  JDevice.cpp  JEngine.cpp  JGraphicResource.cpp  JHashFunction.cpp  JMaterialFactory.cpp  JMaterialResource.cpp  JRenderContext.cpp  JRenderDB.cpp  JRenderDefinition.cpp  JRenderServer.cpp  JRenderTarget.cpp  JRenderer.cpp  JScene.cpp  JSwapChain.cpp
src/engine/private/asset/: JMaterial.cpp  JMesh.cpp  JShader.cpp
src/engine/private/core/: JEngine.cpp  JEngineContext.cpp  JHashFunction.cpp  JJobSystem.cpp
src/engine/private/platform/: JDevice.cpp
src/engine/private/render/: JCameraRenderQueueBuilder.cpp  JCommandQueue.cpp  JDebugOverlayPass.cpp  JDepthPass.cpp  JForwardOverlayPass.cpp  JGBuffer.cpp  JGBufferPass.cpp  JGraphicResource.cpp  JLightingPass.cpp  JMaterialFactory.cpp  JMaterialResource.cpp  JReflectionProbe.cpp  JRenderContext.cpp  JRenderDB.cpp  JRenderDefinition.cpp  JRenderServer.cpp  JRenderSnapshotBuilder.cpp  JRenderTarget.cpp  JRenderer.cpp  JSSAOPass.cpp  JSceneColorPass.cpp  JShadowMap.cpp  JShadowPass.cpp  JSwapChain.cpp
src/engine/private/scene/: JCameraSystem.cpp  JLightSystem.cpp  JRenderObjectSystem.cpp  JScene.cpp  JSceneSerializer.cpp  JTransformPool.cpp  JTransformSystem.cpp
src/engine/render/: JCameraRenderQueueBuilder.h  JCommandQueue.h  JDebugOverlayPass.h  JDepthPass.h  JDrawItemCache.h  JForwardOverlayPass.h  JGBuffer.h  JGBufferPass.h  JGraphicResource.h  JLightingPass.h  JMaterialFactory.h  JMaterialResource.h  JReflectionProbe.h  JRenderContext.h  JRenderDB.h  JRenderDefinition.h  JRenderFrame.h  JRenderPass.h  JRenderResource.h  JRenderServer.h  JRenderSnapshot.h  JRenderSnapshotBuilder.h  JRenderTarget.h  JRenderer.h  JSSAOPass.h  JSceneColorPass.h  JShadowMap.h  JShadowPass.h  JSwapChain.h
src/engine/scene/: JCameraPool.h  JCameraSystem.h  JComponentLayoutDefinition.h  JDrawComponentPool.h  JLightPool.h  JLightSystem.h  JRenderObjectComponentPool.h  JRenderObjectPool.h  JRenderObjectSystem.h  JScene.h  JSceneData.h  JSceneHandle.h  JSceneSerializer.h  JTransformComponents.h  JTransformPool.h  JTransformSystem.h
tools/JAssetImporter/: main.cpp
(+1507 files in other folders)
